[package]
name = "climb-visitor-scraper"
version = "0.1.0"
authors = ["Daniel Gusenburger <danielgusenburger@online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
influxdb = { version = "0.1.0", features = ["derive"] }
reqwest = "0.10.8"
tokio = { version = "0.2.22", features = ["full"] }
chrono = "0.4.19"
serde = "1.0.116"
serde_json = "1.0.58"
