[package]
name = "climb-visitor-scraper"
version = "0.1.0"
authors = ["Daniel Gusenburger <danielgusenburger@online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = "0.10.8"
tokio = { version = "0.2.22", features = ["full"] }
serde = "1.0.116"
serde_json = "1.0.58"
serde_derive = "1.0.116"
bson = "1.1.0"
chrono = { version="0.4.19", features = ["serde"] }
thiserror = "1.0.21"
clap = "2.33.3"

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["tokio-runtime"]
